# ai-self-live

./: .coverage_tmp.json  .env.example  .gitignore  AGENTS.md  README.md  RUNNING.md  SYSTEM_PROMPT.md  dashboard.html  pyproject.toml  server.bat
config/: project.toml
knowledge/: README.md
logs/: history.md
projects/: README.md  TEMPLATE.md
questions/: README.md
scripts/: backup-knowledge.sh  command_runners.py  event_log.py  external_projects.py  file_tools.py  llm_client.py  project_dashboard.py  run_agent.py  run_session.py  run_snapshots.py  session_transaction.py  sleep_memory.py  task_tracker.py
server/: README.md  config.py  server.py  test_server.py
src/: README.md  session_runner.py
state/: external_messages.md  last_session.md
tests/: README.md  conftest.py  test_agent_tool_registry.py  test_apply_patch.py  test_code_analyzer.py  test_command_runner.py  test_command_runners.py  test_compat.py  test_context.py  test_context_analyzer.py  test_context_compressor.py  test_dashboard_generate.py  test_event_log.py  test_external_project_replication.py  test_external_projects.py  test_file_tools.py  test_llm_client.py  test_partial_reader.py  test_project_dashboard.py  test_prompt_builder.py  test_read_file.py  test_read_lines.py  test_reader.py  test_reader_directories.py  test_replace_text.py  test_run_agent.py  test_run_command.py  test_run_session.py  test_run_snapshots.py  test_self_review.py  test_server.py  test_session_transaction.py  test_sleep_memory.py  test_task_tracker.py  test_tool_runtime.py  test_write_file.py
tools/: README.md
(+58 files in other folders)
