[project]
name = "ai-lives"
version = "0.1.0"
description = "Managed autonomous AI experiment scaffold"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=scripts --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
branch = true
source = ["scripts"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]